--- a/index.html
+++ b/index.html
@@ -12,79 +12,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-        font-family: roboto, sans-serif;
-      }
-      /* === header start === */
-      .header {
-        background-color: #f8f8f8;
-      }
-      .container {
-        display: flex;
-        justify-content: space-between;
-        width: 85vw;
-        margin: auto;
-        font-size: 16px;
-      }
-      .header-left,
-      .header-right {
-        display: flex;
-        padding: 10px 0;
-      }
-      .header-left > *,
-      .header-right > * {
-        margin-left: 15px;
-      }
-      .mail {
-        margin-left: 0;
-      }
-      a {
-        color: inherit;
-        text-decoration: none;
-      }
-      /* === header end === */
-      /* === navbar start === */
-      .navbar {
-        width: 85vw;
-        margin: auto;
-        padding: 15px;
-        display: flex;
-        justify-content: space-between;
-      }
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 
-      /* === navbar end === */
-      /* === navbar-collapse start === */
 
-      .navbar-collapse {
-        background-color: #337AB7;
-        width: 88vw;
-        margin: auto;
-        height: 41px;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        color: white;
-        border: 1px solid white;
-      }
-      .navbar-collapse > * {
-        padding: 10px 15px;
-        border-left: 1px solid white;
-      }
-      /* === navbar-collapse end === */
-      /* === header start === */
-      /* === header start === */
-      /* === header start === */
-      /* === header start === */
-      /* === header start === */
-      /* === header start === */
-      /* === header start === */
-      /* === header start === */
-      /* === header start === */
-      /* === header start === */
-    </style>
   </head>
   <body>
     <div class="header">
@@ -128,8 +61,20 @@
         <a href="#">Contact Us</a>
         <a href="#">Login</a>
     </div>
-    <div class="slider">image slider</div>
-    <section class="notice">Notice</section>
+    <div class="slider">Image Slider
+        
+    </div>
+    <section class="notice">
+        <div class="notice-header">
+        <h2>NOTICE BOARD </h2>
+        <div class="notice-header-line"></div>
+    </div>
+    <div class="notice-container">
+        <div class="news">news</div>
+        <div class="notice">notice</div>
+        <div class="announcement">announcement</div>
+    </div>
+    </section>
     <section class="office-desk">Office desk</section>
     <section class="features">Features</section>
     <section class="about-us">About Us</section>
