--- a/index.html
+++ b/index.html
@@ -66,13 +66,26 @@
     </div>
     <section class="notice">
         <div class="notice-header">
-        <h2>NOTICE BOARD </h2>
-        <div class="notice-header-line"></div>
-    </div>
+            <h2>NOTICE BOARD </h2>
+            <div class="notice-header-line"></div>
+        </div>
     <div class="notice-container">
-        <div class="news">news</div>
-        <div class="notice">notice</div>
-        <div class="announcement">announcement</div>
+        <div class="news">
+            <div class="notice-container-header">
+                <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                <h4>NEWS</h4>
+            </div>
+        </div>
+        <div class="notices">
+            <div class="notice-container-header">
+                <i class="fa fa-bell" aria-hidden="true"></i>
+                <h4>NOTICES</h4>
+            </div>
+        </div>
+        <div class="announcements"><div class="notice-container-header">
+            <i class="fa fa-bullhorn" aria-hidden="true"></i>
+            <h4>ANNOUNCEMENTS</h4>
+        </div></div>
     </div>
     </section>
     <section class="office-desk">Office desk</section>
