--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
         </div>
 
         <div class="office-container">
-            <div class="principal">pri</div>
-            <div class="superintendant">sds</div>
+            <div class="principal">
+                <img src="./img/principal.jpg" alt="">
+            </div>
+            <div class="superintendant"><img src="/img/super.jpg" alt=""></div>
             <div class="menu">sdsf</div>
         </div>
 
