--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 <!-- Office Desk starts -->
     <section class="office-desk">
-        <div class="notice-header">
+        <div class="notice-header office-header">
             <h2>FROM OFFICE DESK </h2>
             <div class="notice-header-line"></div>
         </div>
@@ -125,15 +125,63 @@
         <div class="office-container">
             <div class="principal">
                 <img src="./img/principal.jpg" alt="">
+                <div class="card-header">
+                    <h4>Principal's Desk</h4>
+                </div>
+                <div class="card-body">
+                    In the world governed by technology, we at  ITI GOLAGHAT, NRL CENTER OF EXCELLENCE, Pulibor, put in our sincere efforts <span class="read-all">…Read all.</span>
+                </div>
             </div>
-            <div class="superintendant"><img src="/img/super.jpg" alt=""></div>
-            <div class="menu">sdsf</div>
+            <div class="superintendant">
+                <img src="/img/super.jpg" alt="">
+                <div class="card-header">
+                    <h4>Superintendent's Desk</h4>
+                </div>
+                <div class="card-body">In the world governed by technology, we at  ITI GOLAGHAT, NRL CENTER OF EXCELLENCE, Pulibor, put in our sincere efforts
+                    <span class="read-all">...Read all</span>
+                </div>
+            </div>
+
+            <div class="menu">
+                <div class="menu-container">
+                    <div class="items">About <i class="fa fa-caret-down" aria-hidden="true"></i></div>
+                    <div class="items">Admission <i class="fa fa-caret-down" aria-hidden="true"></i> </div>
+                    <div class="items">Employment Notification</div>
+                    <div class="items">IMC</div>
+                    <div class="items">Photo Gallery</div>
+                    <div class="items">Staff Details</div>
+                    <div class="items">Scholarships</div>
+                    <div class="items">RTI</div>
+                    <div class="items">SWAYAM</div>
+                    <div class="items item-contact">Contact us</div>
+                </div>
+            </div>
         </div>
 
     </section>
 
     <!-- Office Desk ends -->
-    <section class="features">Features</section>
+
+    <!-- Features starts -->
+    <section class="features">
+        <div class="features-container">
+            <div class="feature-items">
+                <i class="fa fa-book" aria-hidden="true"></i>
+                <div class="num">4</div>
+                <div class="feature-header">Courses</div>
+            </div>
+            <div class="feature-items"><i class="fa fa-book" aria-hidden="true"></i>
+                <div class="num">4</div>
+                <div class="feature-header">Courses</div></div>
+            <div class="feature-items"><i class="fa fa-book" aria-hidden="true"></i>
+                <div class="num">4</div>
+                <div class="feature-header">Courses</div></div>
+            <div class="feature-items"><i class="fa fa-book" aria-hidden="true"></i>
+                <div class="num">4</div>
+                <div class="feature-header">Courses</div></div></div>
+    </section>
+    
+    <!-- Feature ends -->
     <section class="about-us">About Us</section>
     <section class="courses">Courses</section>
     <section class="moments">Moments</section>
