--- a/index.html
+++ b/index.html
@@ -168,17 +168,17 @@
             <div class="feature-items">
                 <i class="fa fa-book" aria-hidden="true"></i>
                 <div class="num">4</div>
-                <div class="feature-header">Courses</div>
+                <div class="feature-header">COURSES</div>
             </div>
-            <div class="feature-items"><i class="fa fa-book" aria-hidden="true"></i>
-                <div class="num">4</div>
-                <div class="feature-header">Courses</div></div>
-            <div class="feature-items"><i class="fa fa-book" aria-hidden="true"></i>
-                <div class="num">4</div>
-                <div class="feature-header">Courses</div></div>
-            <div class="feature-items"><i class="fa fa-book" aria-hidden="true"></i>
-                <div class="num">4</div>
-                <div class="feature-header">Courses</div></div></div>
+            <div class="feature-items"><i class="fa fa-users" aria-hidden="true"></i>
+                <div class="num">890</div>
+                <div class="feature-header">STUDENTS</div></div>
+            <div class="feature-items"><i class="fa fa-flask" aria-hidden="true"></i>
+                <div class="num">5</div>
+                <div class="feature-header">MODERN LABS</div></div>
+            <div class="feature-items"><i class="fa fa-user-secret" aria-hidden="true"></i>
+                <div class="num">10</div>
+                <div class="feature-header">FACULTIES</div></div></div>
     </section>
     
     <!-- Feature ends -->
