--- a/index.html
+++ b/index.html
@@ -176,16 +176,33 @@
             <div class="feature-items"><i class="fa fa-flask" aria-hidden="true"></i>
                 <div class="num">5</div>
                 <div class="feature-header">MODERN LABS</div></div>
-            <div class="feature-items"><i class="fa fa-user-secret" aria-hidden="true"></i>
+            <div class="feature-items last-item">
+                <i class="fa fa-user-secret" aria-hidden="true"></i>
                 <div class="num">10</div>
                 <div class="feature-header">FACULTIES</div></div></div>
     </section>
     
     <!-- Feature ends -->
-    <section class="about-us">About Us</section>
-    <section class="courses">Courses</section>
-    <section class="moments">Moments</section>
-    <section class="testimonial">testimonial</section>
+
+    <!-- About us starts -->
+    <div class="about-us">
+        <div class="about-left">
+            <div class="about-video">video</div>
+        </div>
+        <div class="about-right">
+            <div class=" about-header">
+                <div class="about-header-tag">ABOUT US </div>
+                <div class="about-header-line"></div>
+            </div>
+            <p>Industrial Training Institute, Golaghat is a Govt. Institute commonly known as ITI Golaghat. It is the one of the top-tier institute of Golaghat, and under the administrative control of the Directorate of Employment and Craftsmen Training, Assam and Ministry of Skill, Employment and Entrepreneurship, Government of Assam. The Institute was started in the year 2018 at Pulibor, Golaghat. The institute was modernized under World Bank Project. As per order released from DGE&T by letter no.-(DGE&T-19(4)/2011-CD-Pt Dated-17th January 2013)all the existing trades in Golaghat ITI have been implemented in the semester. 
+
+                Golaghat ITI was stared in the year 2018 and The Institute has tie-up with NRL since its  inception.Golaghat I.T.I. was up graded under PPP scheme under the control of IMC.The m <span class="read-all"> …Read all.</span></p>
+        </div>
+    </div>
+    <!-- About us ends -->
+    <div class="courses">Courses</div>
+    <div class="moments">Moments</div>
+    <div class="testimonial">testimonial</div>
     <div class="footer">Footer</div>
     <div class="footer-button">
       © All Right Reserved. Developed by Khusboo Thengal
