--- a/index.html
+++ b/index.html
@@ -187,7 +187,14 @@
     <!-- About us starts -->
     <div class="about-us">
         <div class="about-left">
-            <div class="about-video">video</div>
+            <div class="about-video">
+                <a id="about-video" href="https://www.youtube.com/embed/XLj5mXgZjWA" target="mutube-video">
+                    
+                    <img src="/img/about-video.jpg" width="555" height="370">
+                    <!-- <i class="fa fa-play" aria-hidden="true"></i> -->
+                  
+                </a>
+            </div>
         </div>
         <div class="about-right">
             <div class=" about-header">
@@ -195,6 +202,7 @@
                 <div class="about-header-line"></div>
             </div>
             <p>Industrial Training Institute, Golaghat is a Govt. Institute commonly known as ITI Golaghat. It is the one of the top-tier institute of Golaghat, and under the administrative control of the Directorate of Employment and Craftsmen Training, Assam and Ministry of Skill, Employment and Entrepreneurship, Government of Assam. The Institute was started in the year 2018 at Pulibor, Golaghat. The institute was modernized under World Bank Project. As per order released from DGE&T by letter no.-(DGE&T-19(4)/2011-CD-Pt Dated-17th January 2013)all the existing trades in Golaghat ITI have been implemented in the semester. 
+                <br><br>
 
                 Golaghat ITI was stared in the year 2018 and The Institute has tie-up with NRL since its  inception.Golaghat I.T.I. was up graded under PPP scheme under the control of IMC.The m <span class="read-all"> …Read all.</span></p>
         </div>
