--- a/index.html
+++ b/index.html
@@ -208,9 +208,101 @@
         </div>
     </div>
     <!-- About us ends -->
-    <div class="courses">Courses</div>
-    <div class="moments">Moments</div>
-    <div class="testimonial">testimonial</div>
+    <div class="courses">
+        <div class="courses-container">
+            <div class="notice-header">
+                <div class="about-header-tag course-header-tag">OUR COURSES </div>
+                <div class="about-header-line"></div>
+            </div>
+            <div class="course-container">
+            <div class="courses-cards">
+                <img src="/img/copa.jpg" alt="COPA">
+                <div class="course-header">
+                    <div class="course-card-header-tag">COPA</div>
+                    <div class="course-duration">
+                        <i class="fa fa-clock-o" aria-hidden="true"></i>
+                        1 year
+                    </div>
+                </div>
+
+                <div class="course-card-body">
+                    <p>Computer Operator & Programming Assistant(COPA) is a NCVT Affiliated trade under IMC. It is a job oriented trade and suitable for Government and Private Jobs. Computer Operator & Programming Ass <span class="read-all">...View more</span></p>
+                    <div class="course-card-body-footer">
+                        <span class="read-all">Details</Details></span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="courses-cards">
+                <img src="/img/welder.jpg" alt="welder">
+                <div class="course-header">
+                    <div class="course-card-header-tag">Welder</div>
+                    <div class="course-duration">
+                        <i class="fa fa-clock-o" aria-hidden="true"></i>
+                        1 year
+                    </div>
+                </div>
+                <div class="course-card-body">
+                    <p>Welder is a 1 years long NCVT Affiliated trade. It is a job oriented trade and suitable for government and Private Jobs. During the two year duration a candidate is trained on subjects Professional Ski <span class="read-all">...View more</span></p>
+                    <div class="course-card-body-footer">
+                        <span class="read-all">Details</Details></span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="courses-cards">
+                <img src="/img/wireman.jpg" alt="wireman">
+                <div class="course-header">
+                    <div class="course-card-header-tag">Wireman
+                    </div>
+                    <div class="course-duration">
+                        <i class="fa fa-clock-o" aria-hidden="true"></i>
+                        2 years
+                    </div>
+                </div>
+                <div class="course-card-body">
+                    <p>Wireman is a 2 years long SCVT Affiliated trade. It is job oriented trade and suitable for Government and Private Jobs. During the two year duration of Wireman trade a candidate is trained on professi <span class="read-all">...View more</span></p>
+                    <div class="course-card-body-footer">
+                        <span class="read-all">Details</Details></span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        </div>
+    </div>
+    <!-- Courses ends -->
+    <!-- Moments starts -->
+    <div class="moments">
+        <div class="notice-header moments-header">
+            <div class="notice-header-tag moments-header-tag">SOME MOMENTS </div>
+            <div class="notice-header-line moments-header-line"></div>
+        </div>
+        <div class="moments-container">
+            <div class="row">
+                <img src="/img/1.jpg">
+                <img src="/img/2.jpg">
+                <img src="/img/3.jpg" >
+            </div>
+            <div class="row">
+                <img src="/img/4.jpg">
+                <img src="/img/5.jpg">
+                <img src="/img/6.jpg" >
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Moments ends -->
+
+    <!-- Testimonial starts -->
+    <div class="testimonial">
+        <div class="testimonial-container">
+            
+        </div>
+    </div>
+
+    <!-- Testimonial ends -->
     <div class="footer">Footer</div>
     <div class="footer-button">
       © All Right Reserved. Developed by Khusboo Thengal
