--- a/index.html
+++ b/index.html
@@ -297,15 +297,63 @@
 
     <!-- Testimonial starts -->
     <div class="testimonial">
+    <div class="dark-layer"></div> 
         <div class="testimonial-container">
-            
+            <div class="testimonial-quote-container">
+                
+            <div class="testimonial-quote">
+                <p>" Hi this is Alison Burgers! "</p>
+            </div>
+            </div>
         </div>
     </div>
 
     <!-- Testimonial ends -->
-    <div class="footer">Footer</div>
-    <div class="footer-button">
-      © All Right Reserved. Developed by Khusboo Thengal
+    <div class="footer">
+        <div class="footer-top">
+            <div class="footer-container">
+                <div class="footer-information">
+                    <div class="info-header">INFORMATION</div>
+                    <div class="info-items"> <i class="fa fa-angle-double-right" aria-hidden="true"></i> About Us</div>
+                    <div class="info-items"> <i class="fa fa-angle-double-right" aria-hidden="true"></i> Features</div>
+                    <div class="info-items"> <i class="fa fa-angle-double-right" aria-hidden="true"></i> Course</div>
+                    <div class="info-items"> <i class="fa fa-angle-double-right" aria-hidden="true"></i> Event</div>
+                    <div class="info-items"> <i class="fa fa-angle-double-right" aria-hidden="true"></i> Sitemap</div>
+                    <div class="info-items"> <i class="fa fa-angle-double-right" aria-hidden="true"></i> Terms</div>
+                </div>
+                <div class="footer-quick-links">
+                    <div class="info-header">INFORMATION</div>
+                    <div class="info-items">About Us</div>
+                    <div class="info-items">Features</div>
+                    <div class="info-items"> Course</div>
+                    <div class="info-items">Event</div>
+                    <div class="info-items">Sitemap</div>
+                    <div class="info-items">Terms</div>
+                </div>
+                <div class="news-letter">
+                    <div class="info-header">INFORMATION</div>
+                    <div class="info-items">About Us</div>
+                    <div class="info-items">Features</div>
+                    <div class="info-items"> Course</div>
+                    <div class="info-items">Event</div>
+                    <div class="info-items">Sitemap</div>
+                    <div class="info-items">Terms</div>
+                </div>
+                <div class="footer-contact">
+                    <div class="info-header">INFORMATION</div>
+                    <div class="info-items">About Us</div>
+                    <div class="info-items">Features</div>
+                    <div class="info-items"> Course</div>
+                    <div class="info-items">Event</div>
+                    <div class="info-items">Sitemap</div>
+                    <div class="info-items">Terms</div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-button">
+            © All Right Reserved. Developed by Khusboo Thengal
+          </div>
     </div>
+
   </body>
 </html>
