--- a/index.html
+++ b/index.html
@@ -322,31 +322,26 @@
                     <div class="info-items"> <i class="fa fa-angle-double-right" aria-hidden="true"></i> Terms</div>
                 </div>
                 <div class="footer-quick-links">
-                    <div class="info-header">INFORMATION</div>
-                    <div class="info-items">About Us</div>
-                    <div class="info-items">Features</div>
-                    <div class="info-items"> Course</div>
-                    <div class="info-items">Event</div>
-                    <div class="info-items">Sitemap</div>
-                    <div class="info-items">Terms</div>
+                    <div class="info-header">QUICK LINKS</div>
+                    <div class="info-items"><i class="fa fa-angle-double-right" aria-hidden="true"></i> RTI</div>
+                    <div class="info-items"><i class="fa fa-angle-double-right" aria-hidden="true"></i> DECT</div>
+                    <div class="info-items"> <i class="fa fa-angle-double-right" aria-hidden="true"></i> AICTE</div>
+                    <div class="info-items"><i class="fa fa-angle-double-right" aria-hidden="true"></i> SWAYAM</div>
+                    <div class="info-items"><i class="fa fa-angle-double-right" aria-hidden="true"></i> ITI, Assam</div>
+                    <div class="info-items"><i class="fa fa-angle-double-right" aria-hidden="true"></i> National Scholarship Portal</div>
                 </div>
                 <div class="news-letter">
-                    <div class="info-header">INFORMATION</div>
-                    <div class="info-items">About Us</div>
-                    <div class="info-items">Features</div>
-                    <div class="info-items"> Course</div>
-                    <div class="info-items">Event</div>
-                    <div class="info-items">Sitemap</div>
-                    <div class="info-items">Terms</div>
+                    <div class="info-header">NEWS LETTER</div>
+                    <p class="footer-news-detail">Get latest update, news & academic offers</p>
+                    <input type="text" placeholder="Type your Email">
+                    <button class="subscribe">Subscribe!</button>
                 </div>
                 <div class="footer-contact">
-                    <div class="info-header">INFORMATION</div>
-                    <div class="info-items">About Us</div>
-                    <div class="info-items">Features</div>
-                    <div class="info-items"> Course</div>
-                    <div class="info-items">Event</div>
-                    <div class="info-items">Sitemap</div>
-                    <div class="info-items">Terms</div>
+                    <div class="info-header">CONTACT</div>
+                    <div class="info-items">Pulibor, Golaghat, Assam, 785621</div>
+                    <div class="info-items">Phone: 03774291544</div>
+                    <div class="info-items"> Website: www.itigolaghat.org</div>
+                    <div class="info-items">Email: info@itigolaghat.org</div>
                 </div>
             </div>
         </div>
