--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
 
     <!-- Image Slider starts -->
 
-    <div class="slider">Image Slider
+    <div class="slider">
+        <img src="/img/slider.jpg" alt="slider image" class="slider-image">
+        <div class="slider-layer">
+            <div class="slider-top-heading">Welcome to ITI Golaghat</div>
+            <div class="slider-main-heading">A place for learning and growing.</div>
+            <div class="slider-sub-heading">We will help you to learn, create, solve real world problems</div>
+            <button class="read-more">Read More</button>
+        </div>
         
     </div>
     <!-- Image Slider ends -->
@@ -299,11 +306,15 @@
     <div class="testimonial">
     <div class="dark-layer"></div> 
         <div class="testimonial-container">
-            <div class="testimonial-quote-container">
-                
-            <div class="testimonial-quote">
-                <p>" Hi this is Alison Burgers! "</p>
+            <div class="testimonial-quote-container">   
+                <div class="testimonial-quote">
+                    <p>" Hi this is Alison Burgers! "</p>
+                </div>
             </div>
+            <div class="testimonial-student">
+                <img src="/img/khusboo.jpg" alt="user1" class="student-avatar">
+                <div class="student-name">Khusboo Thengal</div>
+                <div class="student-department">Student (COPA)</div>
             </div>
         </div>
     </div>
@@ -345,8 +356,8 @@
                 </div>
             </div>
         </div>
-        <div class="footer-button">
-            © All Right Reserved. Developed by Khusboo Thengal
+        <div class="footer-buttom">
+            © All Right Reserved. Developed by <a href="https://www.instagram.com/khusboo_thengal?igsh=czY4eDYxOHd1Y213">Khusboo Thengal</a> 
           </div>
     </div>
 
