--- a/index.html
+++ b/index.html
@@ -170,12 +170,11 @@
         <div class="notice-body">
             <div class="announcement-container">
                 <marquee behavior="scroll" direction="up">
-                    <ul>
-                        <li class="ann-item"><span ><i class="fa fa-calendar" aria-hidden="true"></i> March 25, 2022</span>
-                        <span>SCVT Trade final test and practical 2022</span>
+                    <span class="ann-item">
+                        <span class="ann-date"><i class="fa fa-calendar" aria-hidden="true"></i> March 25, 2022</span>
+                        <span class="ann-detail">SCVT Trade final test and practical 2022</span>
                         <img src="/img/pdf-download.png" alt="pdf-download" class="ann-download">    
-                    </li>
-                    </ul>
+                    </span>
                 </marquee>
             </div>
         </div>
