--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
         <div class="notice-body">
             <div class="announcement-container">
                 <marquee behavior="scroll" direction="up">
-                    <span class="ann-item">
+                    <p class="ann-item">
                         <span class="ann-date"><i class="fa fa-calendar" aria-hidden="true"></i> March 25, 2022</span>
                         <span class="ann-detail">SCVT Trade final test and practical 2022</span>
                         <img src="/img/pdf-download.png" alt="pdf-download" class="ann-download">    
-                    </span>
+                    </p>
                 </marquee>
             </div>
         </div>
@@ -372,7 +372,7 @@
         <div class="testimonial-container">
             <div class="testimonial-quote-container">   
                 <div class="testimonial-quote">
-                    <p>" Hi this is Alison Burgers! "</p>
+                    " Hi this is Alison Burgers! "
                 </div>
             </div>
             <div class="testimonial-student">
